--- a/src/theme-src/style.css
+++ b/src/theme-src/style.css
@@ -3,7 +3,7 @@ Theme Name: GNPA Theme
 Theme URI: https://preparacaoeautossuficiencia.pt
 Author: Hakira Shymuy
 Author URI: https://github.com/Hakira-Shymuy
-Description: Tema para o site da GNPA.
+Description: Tema para o site do GNPA.
 Tags: GNPA
 Requires at least: 6.7
 Requires PHP: 8.4
