--- a/src/theme-src/templates/index.html
+++ b/src/theme-src/templates/index.html
@@ -1,5 +1,33 @@
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group">
+<!-- wp:template-part {"slug":"main-header","area":"header"} /-->
 
-</main>
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+<main class="wp-block-group"><!-- wp:group {"align":"wide","layout":{"type":"constrained"}} -->
+<div class="wp-block-group alignwide"><!-- wp:post-content {"align":"full"} /-->
+
+<!-- wp:heading {"level":1} -->
+<h1 class="wp-block-heading">Prepare-se para o inesperado Viva com confiança</h1>
+<!-- /wp:heading -->
+
+<!-- wp:heading -->
+<h2 class="wp-block-heading">Prepare-se para o inesperado Viva com confiança</h2>
+<!-- /wp:heading -->
+
+<!-- wp:heading {"level":3} -->
+<h3 class="wp-block-heading">Prepare-se para o inesperado Viva com confiança</h3>
+<!-- /wp:heading -->
+
+<!-- wp:heading {"level":4} -->
+<h4 class="wp-block-heading">Prepare-se para o inesperado Viva com confiança</h4>
+<!-- /wp:heading -->
+
+<!-- wp:heading {"level":5} -->
+<h5 class="wp-block-heading">Prepare-se para o inesperado Viva com confiança</h5>
+<!-- /wp:heading -->
+
+<!-- wp:heading {"level":6} -->
+<h6 class="wp-block-heading">Prepare-se para o inesperado Viva com confiança</h6>
+<!-- /wp:heading --></div>
+<!-- /wp:group --></main>
 <!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"main-footer"} /-->
