--- a/src/blocks-src/src/feature-section/style.scss
+++ b/src/blocks-src/src/feature-section/style.scss
@@ -2,58 +2,61 @@
 // 	padding: 1rem;
 // 	border: 1px dashed #ccc;
 //   }
-.wp-block-gnpa-feature-section.feature-section {
+.wp-block-gnpa-feature-section {
 	position: relative;
 	display: flex;
 	align-items: stretch;
-	width: 100%;
-	min-height: 500px;
 	background-color: #111;
-	overflow: hidden;
+	padding: 0 2rem;
 
 	.container {
 		position: relative;
-		z-index: 2;
 		max-width: 1330px;
-		padding: 4rem 2rem;
-		margin: 0 auto;
-		width: 100%;
-		display: flex;
-		align-items: center;
+		padding: 4rem 0;
+		margin-inline: auto;
+		display: grid;
+		grid-template-columns: repeat(12, 1fr);
 	}
 
 	.content {
-		max-width: 50%;
-		color: white;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		grid-column: 1 / 8;
+		color: var(--wp--preset--color--text-color);
+		line-height: 1.2;
+		z-index: 2;
 
 		.lede {
-			display: block;
-			color: #c0c0c0;
-			font-weight: 600;
-			font-size: 0.9rem;
+			font-family: var(--wp--preset--font-family--russo-one);
+			font-size: var(--wp--preset--font-size--large);
+			color: var(--wp--preset--color--headings-color);
 			text-transform: uppercase;
 			margin-bottom: 1rem;
 		}
 
 		.heading {
 			color: #6fa135;
-			font-size: 2.5rem;
+			font-size: var(--wp--preset--font-size--xx-large);
 			margin-bottom: 1.5rem;
-			line-height: 1.2;
-			font-weight: 700;
+			line-height: 1.3;
 		}
 
-		.text {
+		.description {
+			max-width: 48ch;
 			margin-bottom: 2rem;
+			line-height: 1.4;
 		}
 
-		.button {
+		.cta-button {
+			font-family: var(--wp--preset--font-family--russo-one);
+			font-size: var(--wp--preset--font-size--extra-small);
 			background: #e57c00;
-			color: #fff;
-			padding: 0.75rem 1.5rem;
+			color: var(--wp--preset--color--button-text-color);
+			padding: 16px 22px;
+			text-transform: uppercase;
 			text-decoration: none;
-			display: inline-block;
-			font-weight: bold;
+			letter-spacing: 1px;
 		}
 	}
 
@@ -61,7 +64,7 @@
 		position: absolute;
 		top: 0;
 		right: 0;
-		width: 50vw;
+		width: 45vw;
 		height: 100%;
 		background-size: cover;
 		background-position: center center;
