hide: rename hero section, create feature section block

--- a/src/blocks-src/src/feature-section/style.scss
+++ b/src/blocks-src/src/feature-section/style.scss
@@ -1,99 +1,4 @@
-.wp-block-gnpa-feature-section {
-	position: relative;
-	display: flex;
-	align-items: stretch;
-	background-color: var(--wp--preset--color--dark-blue);
-	padding: 0 2rem;
-
-	.container {
-		position: relative;
-		max-width: 1330px;
-		padding: 4rem 0;
-		margin-inline: auto;
-		display: grid;
-		grid-template-columns: repeat(12, 1fr);
-	}
-
-	.content {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-		grid-column: 1 / 8;
-		color: var(--wp--preset--color--text-color);
-		line-height: 1.2;
-		z-index: 2;
-		padding-right: 30px;
-
-		.lede {
-			font-family: var(--wp--preset--font-family--russo-one);
-			font-size: var(--wp--preset--font-size--large);
-			color: var(--wp--preset--color--headings-color);
-			text-transform: uppercase;
-			margin-bottom: 1rem;
-		}
-
-		.heading {
-			color: #6fa135;
-			font-size: var(--wp--preset--font-size--xx-large);
-			margin-bottom: 1.5rem;
-			line-height: 1.3;
-		}
-
-		.description {
-			max-width: 48ch;
-			margin-bottom: 2rem;
-			line-height: 1.4;
-		}
-
-		.cta-button {
-			font-family: var(--wp--preset--font-family--russo-one);
-			font-size: var(--wp--preset--font-size--extra-small);
-			background: #e57c00;
-			color: var(--wp--preset--color--button-text-color);
-			padding: 16px 22px;
-			text-transform: uppercase;
-			text-decoration: none;
-			letter-spacing: 1px;
-		}
-	}
-
-	.image-side {
-		position: absolute;
-		top: 0;
-		right: 0;
-		width: 45vw;
-		height: 100%;
-		background-size: cover;
-		background-position: center center;
-		background-repeat: no-repeat;
-		z-index: 1;
-	}
-}
-
-
-@media screen and (max-width: 930px) {
-	.wp-block-gnpa-feature-section {
-		flex-direction: column;
-
-		.container {
-			grid-template-columns: 1fr;
-			padding: 2rem 1rem;
-			order: 2;
-		}
-
-		.content {
-			grid-column: auto;
-			padding-right: 0;
-			padding-bottom: 2rem;
-		}
-
-		.image-side {
-			position: relative;
-			width: calc(100% + 4rem);
-			height: 300px;
-			order: 1;
-			margin-left: -2rem;
-			margin-right: -2rem;
-		}
-	}
-}
+.wp-block-gnpa-feature-section-image-offset {
+	padding: 1rem;
+	border: 1px dashed #ccc;
+  }
