fix: index template main wrapper was using constrained width

--- a/src/theme-src/templates/index.html
+++ b/src/theme-src/templates/index.html
@@ -1,6 +1,6 @@
 <!-- wp:template-part {"slug":"main-header","area":"header"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","layout":{"type":"default"}} -->
 <main class="wp-block-group"><!-- wp:group {"align":"wide","layout":{"type":"constrained"}} -->
 <div class="wp-block-group alignwide"><!-- wp:post-content {"align":"full"} /--></div>
 <!-- /wp:group --></main>
