--- a/src/blocks-src/src/hero-section/style.scss
+++ b/src/blocks-src/src/hero-section/style.scss
@@ -32,8 +32,8 @@
 			margin-bottom: 1rem;
 		}
 
-		.heading {
-			color: #6fa135;
+		.heading-1 {
+			color: var(--wp--preset--color--accent-green);
 			font-size: var(--wp--preset--font-size--xx-large);
 			margin-bottom: 1.5rem;
 			line-height: 1.3;
@@ -45,19 +45,13 @@
 			line-height: 1.4;
 		}
 
-		.cta-button {
-			font-family: var(--wp--preset--font-family--russo-one);
-			font-size: var(--wp--preset--font-size--extra-small);
-			background: #e57c00;
+		.cta-button--primary {
+			background: var(--wp--preset--color--accent-orange);
 			color: var(--wp--preset--color--button-text-color);
-			padding: 16px 22px;
-			text-transform: uppercase;
-			text-decoration: none;
-			letter-spacing: 1px;
 		}
 	}
 
-	.image-side {
+	.hero-section-image-side--right {
 		position: absolute;
 		top: 0;
 		right: 0;
@@ -87,7 +81,7 @@
 			padding-bottom: 2rem;
 		}
 
-		.image-side {
+		.hero-section-image-side--right {
 			position: relative;
 			width: calc(100% + 4rem);
 			height: 300px;
