--- a/src/blocks-src/src/event-list-frontpage/style.scss
+++ b/src/blocks-src/src/event-list-frontpage/style.scss
@@ -1,3 +1,25 @@
-.wp-block-gnpa-event-list-frontpage {
+.events-grid--two {
 
-  }
+	.event-card:first-child {
+		grid-column: 1 / 8;
+	}
+	.event-card:nth-child(2) {
+		grid-column: 8 / 13;
+	}
+}
+
+.events-grid--multi {
+
+	.event-card {
+		grid-column: span 6;
+	}
+}
+
+.event-card {
+		&__media img {
+			width: 100%;
+			height: 200px;
+			object-fit: cover;
+			object-position: top;
+		}
+	}
