--- a/src/theme-src/assets/styles/styles.css
+++ b/src/theme-src/assets/styles/styles.css
@@ -22,6 +22,11 @@ section {
 	padding: 0 2rem;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 
 /* classes */
 
@@ -40,6 +45,11 @@ section {
 	letter-spacing: 1px;
 }
 
+.grid {
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	gap: 2rem;
+}
 
 @media screen and (max-width: 930px) {
 	.container {
